fix scrollbar repositioning page

--- a/src/configs/styles/App.css
+++ b/src/configs/styles/App.css
@@ -1,17 +1,6 @@
-body,
-#root {
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto !important;
-}
-
 html {
-  overflow-y: auto;
   overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
 input.ltr-input,
@@ -63,34 +52,73 @@ input.rtl-placeholder::placeholder,
 }
 
 @keyframes bellRing {
-  0%  { }
-  10%   { transform: rotate(10deg);  }
-  20%  { transform: rotate(-20deg); }
-  30%  { transform: rotate(20deg); }
-  40%   { transform: rotate(-20deg);  }
-  50%  { transform: rotate(20deg); }
-  60%  { transform: rotate(-10deg); }
-  80%  { transform: scale(2); }
-  100%  { transform: scale(1); }
+  0% {}
+
+  10% {
+    transform: rotate(10deg);
+  }
+
+  20% {
+    transform: rotate(-20deg);
+  }
+
+  30% {
+    transform: rotate(20deg);
+  }
+
+  40% {
+    transform: rotate(-20deg);
+  }
+
+  50% {
+    transform: rotate(20deg);
+  }
+
+  60% {
+    transform: rotate(-10deg);
+  }
+
+  80% {
+    transform: scale(2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 @keyframes shake {
-  11%, 19% {
+
+  11%,
+  19% {
     transform: translate3d(-1px, 0, 0);
   }
-  12%, 18% {
+
+  12%,
+  18% {
     transform: translate3d(2px, 0, 0);
   }
-  13%, 15%, 17% {
+
+  13%,
+  15%,
+  17% {
     transform: translate3d(-4px, 0, 0);
   }
-  14%, 16% {
+
+  14%,
+  16% {
     transform: translate3d(4px, 0, 0);
   }
 }
 
 @keyframes starred {
-  0%  { }
-  50%  { transform: scale(1.5); }
-  100%  { transform: scale(1); }
+  0% {}
+
+  50% {
+    transform: scale(1.5);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
